@@ -1,3 +1,10 @@
+2014-02-03  Moritz Bunkus  <moritz@bunkus.org>
+
+        * mkvmerge: bug fix: When reading M2TS files belonging to an MPLS
+        playlist mkvmerge will now only copy packets whose timestamps lie
+        between the »in time« and »out time« restrictions from the
+        playlist's entry corresponding to that M2TS file. Fixes #985.
+
 2014-01-22  Moritz Bunkus  <moritz@bunkus.org>
 
         * all: Windows 64bit: fixed return value checks for opening
